
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        
        android:gravity="center|top"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >
        
        <TextView
            android:id="@+id/LoginView_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="42dp"
            android:layout_marginTop="26dp"
            android:gravity="center"
            android:hint="@string/username_string"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/title_gray" />

        <EditText
            android:id="@+id/LoginView_login_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username_string"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/LoginView_password_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:hint="@string/password_string"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            android:id="@+id/LoginView_connect_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connection_string" />

        <TextView
            android:id="@+id/album_view_row_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="- ou -"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/title_gray" />

        <Button
            android:id="@+id/LoginView_create_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account_string" />
    </LinearLayout>